# xml-to-pydict

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py  tox.ini  xmlpydict.pyi  xmlpydict_parser.pyi
.github/workflows/: python-publish.yml  tests.yml
examples/: example.ipynb
src/: xmlparse.cpp  xmlparse.py
tests/: test.py  test_parse.py
