[build-system]
requires = [ "setuptools>=61.0", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "xmlpydict"
version = "0.0.8"
description="xml to dictionary tool for python"
authors = [
    {name = "Matthew Taylor", email = "matthew.taylor.andre@gmail.com"},
]
urls = {Homepage = "https://github.com/MatthewAndreTaylor/xml-to-pydict"}
requires-python = ">=3.7"
keywords = [ "xml", "dictionary" ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
tests = [ "pytest", "xmltodict" ]
